@@ -1,2 +1,0 @@
-@comment $NetBSD: PLIST,v 1.1.1.1 2011/02/27 16:44:40 wiz Exp $
-lib/gmpc/plugins/lastfmplugin.la
