@@ -1,5 +1,0 @@
-$NetBSD: distinfo,v 1.1.1.1 2011/02/27 16:44:40 wiz Exp $
-
-SHA1 (gmpc-last-fm-0.20.0.tar.gz) = 9b262aa3ecd9b4b0faa077217442dcc79c841c13
-RMD160 (gmpc-last-fm-0.20.0.tar.gz) = fc6c129de2546fb19d13af7354b2496d1f9d5dd1
-Size (gmpc-last-fm-0.20.0.tar.gz) = 309397 bytes
