@@ -1,5 +1,0 @@
-$NetBSD: distinfo,v 1.1.1.1 2011/02/27 16:29:28 wiz Exp $
-
-SHA1 (gmpc-mdcover-0.20.0.tar.gz) = 1c2c29a0332ac8b6a5bd0f71ea21623de9324d5c
-RMD160 (gmpc-mdcover-0.20.0.tar.gz) = 07a5579c17fa0c9126dfc13ba8a3010a14e453f9
-Size (gmpc-mdcover-0.20.0.tar.gz) = 305148 bytes
